# Flappy-Bird-Clone

./: CMakeLists.txt  README.md
cmake/: utils.cmake
flappy-game/: CMakeLists.txt
flappy-game/src/: asset_manager.hpp  assets.hpp  core.hpp  entity.hpp  flappy.cpp  flappy.hpp  fwd.hpp  gfx.cpp  gfx.hpp  main.cpp  physics.hpp  pipe_line.cpp  pipe_line.hpp
tests/: CMakeLists.txt
